# octupus

./: .env.example  .gitignore  MIGRATION.md  README.md  __init__.py  cli.py  config.py  demo.py  experience.py  experience_fixed.py  pyproject.toml  run_cli.py  run_octopus.py  run_simple_example.py
config/: application.yml
core/: __init__.py  approval.py  decision_card.py  decision_engine.py  ethics.py  llm_client.py  llm_provider.py  memory.py  perception.py  session.py  simulation.py  world_model.py
demo/: README.md  full_workflow_demo.py  refund_agent_demo.py  refund_chat_bot.py  run_cli.py  simple_workflow_demo.py  test_llm.py
demo/tests/: __init__.py  test_decision_planning.py  test_ethics_guardrails.py  test_memory_system.py  test_odep_protocol.py  test_world_model.py
docs/: ARCHITECTURE.md  CODEX_COLLABORATION.md  COMPONENTS.md  DATA_MODELS.md  DEVELOPMENT_GUIDE.md  DIAGRAMS.md  IMPLEMENTATION_PLAN.md  ODEP_V1_SPEC.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  PYDANTIC_MODELS.md  QUICKSTART.md  QUICKSTART_GUIDE.md  QUICK_REFERENCE.md  REMEDIATION_PLAN.md
examples/: full_workflow.py  simple_example.py
execution/: __init__.py  base.py  executor.py  executors.py  tools.py
models/: __init__.py  core_models.py
octopus/: __init__.py  cli.py  doctor.py  quickstart.py
octopus/protocol/: communication.py
perception/: __init__.py  poller.py  workspace.py
protocol/: __init__.py  communication.py
tests/: __init__.py  demo.py  experience.py  experience_fixed.py  full_workflow.py  test_core.py  test_execution.py  test_integration.py
(+14 files in other folders)
